--- a/css/styles.css
+++ b/css/styles.css
@@ -1909,6 +1909,8 @@ footer {
 .event .tabs-menu li {
   height: 80px; }
 
+.mac .faq-block .nice-select .current {
+  top: -12px; }
 .mac .h2 {
   position: relative;
   top: -30px; }
@@ -1921,9 +1923,15 @@ footer {
 .mac .team .swiper-slide .text .h4 {
   position: relative;
   top: -20px; }
-.mac .testimonials .swiper-slide .top .right .h3 {
+.mac .testimonials .swiper-slide .top .right .h3, .mac .blog h1 {
   position: relative;
   top: -20px; }
+.mac .blog .item .text-wrap .h5, .mac .popup-blog .content .h2 {
+  position: relative;
+  top: -20px; }
+.mac .popup-blog .content p.h3, .mac .popup-blog .more-blog p.h4 {
+  position: relative;
+  top: -15px; }
 .mac .accordion-thumb .title {
   position: relative;
   top: -20px; }
@@ -1954,6 +1962,9 @@ footer .soc a:hover img {
           filter: invert(60%) sepia(56%) saturate(563%) hue-rotate(359deg) brightness(140%) contrast(106%); }
 
 /*-------------------------END-PAGE-HOME--------------------------*/
+.mac .faq-add .h3 {
+  position: relative;
+  top: -20px; }
 .mac .border {
   border: 1px solid #000;
   padding: 0 20px;
@@ -2076,23 +2087,556 @@ footer .soc a:hover img {
 
 /*------------------------END-PAGE-PP--------------------------*/
 /*-------------------------PAGE-FAQ--------------------------*/
-.faq-block h1 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  font-size: 100px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 77%; }
-  .faq-block h1 b {
+.faq-block {
+  padding-top: 0 !important; }
+  .faq-block .breadcrumb {
+    margin-bottom: 57px; }
+  .faq-block h1 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    font-size: 100px;
+    font-style: normal;
     font-weight: 400;
-    position: relative; }
-.faq-block .tooltip {
-  right: -40px; }
+    line-height: 77%;
+    margin-bottom: 50px; }
+    .faq-block h1 b {
+      font-weight: 400;
+      position: relative; }
+  .faq-block .tooltip {
+    right: -40px; }
+  .faq-block .select-block {
+    border-radius: 90px;
+    background: #F9E5D7;
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    padding: 10px 15px;
+    margin-bottom: 60px; }
+    .faq-block .select-block .item {
+      width: calc(50% - 10px); }
+  .faq-block .nice-select {
+    width: 100%;
+    border-radius: 90px;
+    border: 1px solid #FF7900 !important;
+    background: #FEF7F3;
+    height: 66px;
+    line-height: 64px;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 400;
+    color: #000;
+    font-family: "Petrarka", sans-serif; }
+    .faq-block .nice-select .current {
+      position: relative; }
+  .faq-block .nice-select:after {
+    left: inherit;
+    right: 20px;
+    width: 7px;
+    height: 7px;
+    margin-top: -5px; }
+  .faq-block .nice-select .list {
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 150%;
+    color: #000;
+    font-family: 'Montserrat', sans-serif;
+    border-radius: 10px;
+    background: #FEF7F3;
+    padding: 15px 25px; }
+    .faq-block .nice-select .list li {
+      border-bottom: 1px solid #787878;
+      height: 50px;
+      line-height: 50px;
+      font-weight: 500; }
+    .faq-block .nice-select .list li:last-child {
+      border-bottom: 0; }
+    .faq-block .nice-select .list .disabled {
+      display: none; }
+  .faq-block .bottom {
+    margin-top: 75px; }
+  .faq-block .bottom a {
+    background: transparent;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 150%;
+    color: #FF7900;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content; }
+    .faq-block .bottom a img {
+      margin-right: 10px;
+      position: relative;
+      top: -1px;
+      vertical-align: top; }
+    .faq-block .bottom a:hover {
+      color: #EB6F00; }
+  .faq-block .nice-select .option:hover, .faq-block .nice-select .option.focus, .faq-block .nice-select .option.selected.focus {
+    color: #FF7900;
+    font-weight: 500; }
+
+.faq-add {
+  padding: 35px 0 120px; }
+  .faq-add .bg-mob {
+    display: none; }
+  .faq-add .content {
+    position: relative;
+    border-radius: 10px;
+    overflow: hidden;
+    background: #2B3D24;
+    padding: 92px 53px; }
+  .faq-add .wrap {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    z-index: 10; }
+  .faq-add .text {
+    width: 48%; }
+  .faq-add .btn-wrap {
+    width: 48%;
+    position: relative;
+    top: -10px; }
+  .faq-add .h3 {
+    font-size: 56px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 88%;
+    font-family: "Petrarka", sans-serif;
+    margin-bottom: 20px;
+    color: #fff; }
+  .faq-add p {
+    color: #fff;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%; }
+  .faq-add .bg img {
+    position: absolute;
+    left: 0;
+    width: 100%; }
+  .faq-add .bg .img-1 {
+    top: 88px;
+    z-index: 3; }
+  .faq-add .bg .img-2 {
+    top: 140px;
+    z-index: 4; }
+  .faq-add .bg .img-3 {
+    top: 180px;
+    z-index: 5; }
+
+.btn-circle-orange {
+  background: #FF7900;
+  color: #fff; }
+  .btn-circle-orange:after {
+    background: #EB6F00; }
 
 /*------------------------END-PAGE-FAQ--------------------------*/
+/*-------------------------PAGE-BLOG-------------------------*/
+.blog {
+  position: relative;
+  padding-bottom: 133px; }
+  .blog .bg-mob {
+    display: none; }
+  .blog .bg {
+    top: -50px; }
+    .blog .bg img {
+      position: absolute;
+      left: 0;
+      width: 100%; }
+    .blog .bg .img-1 {
+      top: 0; }
+    .blog .bg .img-2 {
+      top: 85px; }
+    .blog .bg .img-3 {
+      top: 135px; }
+  .blog .head-blog {
+    padding-top: 27px; }
+    .blog .head-blog p {
+      color: #000;
+      text-align: center; }
+    .blog .head-blog .sub-title {
+      font-size: 32px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 150%;
+      margin-bottom: 30px; }
+  .blog h1 {
+    font-size: 100px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 77%;
+    color: #000;
+    text-align: center;
+    margin-bottom: 25px; }
+  .blog .form-wrap {
+    width: 560px;
+    margin: 15px auto 40px;
+    position: relative; }
+    .blog .form-wrap label {
+      display: none; }
+    .blog .form-wrap input {
+      width: 100%;
+      outline: none;
+      border-radius: 90px;
+      border: 1px solid #FF7900;
+      background: #FEF7F3;
+      height: 66px;
+      line-height: 64px;
+      font-size: 18px;
+      color: #000;
+      padding: 0 200px 0 35px; }
+    .blog .form-wrap button {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      width: 175px; }
+  .blog .send-block {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 0 100px;
+    z-index: 10;
+    display: none;
+    background: #fff; }
+    .blog .send-block p {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      font-size: 24px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 150%;
+      color: #8FA703; }
+  .blog .content-width {
+    z-index: 10;
+    position: relative; }
+  .blog .sort-line {
+    margin: 120px 0 40px;
+    padding: 0 80px; }
+    .blog .sort-line ul {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+      position: relative;
+      padding-left: 108px; }
+      .blog .sort-line ul li {
+        width: -webkit-fit-content;
+        width: -moz-fit-content;
+        width: fit-content;
+        margin: 0 20px 20px 0;
+        position: relative; }
+        .blog .sort-line ul li input {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          border-radius: 30px;
+          opacity: 0;
+          cursor: pointer;
+          z-index: 5; }
+        .blog .sort-line ul li label {
+          background: #FEF7F3;
+          -webkit-transition: all .4s ease;
+          transition: all .4s ease;
+          color: #000;
+          font-size: 18px;
+          height: 54px;
+          line-height: 52px;
+          border-radius: 30px;
+          min-width: 88px; }
+        .blog .sort-line ul li input:checked + label {
+          background: #FF7900;
+          color: #fff; }
+        .blog .sort-line ul li input:hover + label {
+          background: #FF7900;
+          color: #fff; }
+      .blog .sort-line ul li:first-child {
+        position: absolute;
+        top: 0;
+        left: 0; }
+  .blog .content {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 65px 40px; }
+  .blog .item figure {
+    position: relative;
+    overflow: hidden;
+    height: 230px;
+    border-radius: 10px; }
+    .blog .item figure img {
+      width: 100%;
+      height: 100%;
+      -o-object-fit: cover;
+         object-fit: cover;
+      -webkit-transition: all .4s ease;
+      transition: all .4s ease; }
+    .blog .item figure a:hover img {
+      -webkit-transform: scale(1.03);
+              transform: scale(1.03); }
+    .blog .item figure .label {
+      position: absolute;
+      top: 15px;
+      left: 15px;
+      z-index: 2;
+      border-radius: 20px;
+      background: #F9E5D7; }
+      .blog .item figure .label p {
+        line-height: 30px;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        padding: 0 13px;
+        color: #000; }
+  .blog .item .text-wrap {
+    padding: 27px 0 0; }
+    .blog .item .text-wrap p {
+      text-align: left;
+      color: #000;
+      margin-bottom: 28px; }
+    .blog .item .text-wrap .h5 {
+      font-size: 40px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 88%;
+      margin-bottom: 10px;
+      text-align: left; }
+    .blog .item .text-wrap p.date {
+      margin-bottom: 0;
+      font-size: 14px; }
+  .blog .item .link-wrap {
+    margin-bottom: 30px; }
+    .blog .item .link-wrap a {
+      color: #FF7900; }
+      .blog .item .link-wrap a:hover {
+        color: #000; }
+  .blog .bottom {
+    margin-top: 82px;
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+    .blog .bottom a {
+      background: transparent;
+      font-size: 18px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: 150%;
+      color: #FF7900;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      width: -webkit-fit-content;
+      width: -moz-fit-content;
+      width: fit-content; }
+      .blog .bottom a img {
+        margin-right: 10px;
+        position: relative;
+        top: -1px;
+        vertical-align: top; }
+      .blog .bottom a:hover {
+        color: #EB6F00; }
+
+.popup-blog {
+  padding: 0;
+  width: 1160px; }
+  .popup-blog .popup-main {
+    padding: 0; }
+  .popup-blog .line-link {
+    border-bottom: 1px solid #FFF0E8;
+    height: 84px;
+    padding: 15px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap; }
+    .popup-blog .line-link > a {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      width: 52px;
+      height: 52px; }
+    .popup-blog .line-link .label {
+      display: inline-block;
+      border-radius: 20px;
+      background: #F9E5D7;
+      padding: 0 13px;
+      height: 30px; }
+      .popup-blog .line-link .label p {
+        font-size: 14px;
+        color: #000;
+        margin: 0;
+        line-height: 30px; }
+    .popup-blog .line-link .close:hover img {
+      -webkit-filter: invert(60%) sepia(56%) saturate(563%) hue-rotate(359deg) brightness(122%) contrast(106%);
+              filter: invert(60%) sepia(56%) saturate(563%) hue-rotate(359deg) brightness(122%) contrast(106%); }
+    .popup-blog .line-link .share:hover img {
+      -webkit-filter: invert(60%) sepia(56%) saturate(563%) hue-rotate(359deg) brightness(101%) contrast(106%);
+              filter: invert(60%) sepia(56%) saturate(563%) hue-rotate(359deg) brightness(101%) contrast(106%); }
+  .popup-blog .content {
+    padding: 50px 60px;
+    border-bottom: 1px solid #FFF0E8; }
+    .popup-blog .content .h2 {
+      font-size: 56px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 88%;
+      text-align: center;
+      color: #000;
+      margin-bottom: 40px; }
+    .popup-blog .content figure {
+      width: 100%;
+      height: auto;
+      margin-bottom: 60px; }
+      .popup-blog .content figure img {
+        width: 100%;
+        height: auto;
+        border-radius: 10px; }
+    .popup-blog .content p {
+      margin-bottom: 25px; }
+      .popup-blog .content p a {
+        color: #FF7900; }
+        .popup-blog .content p a:hover {
+          color: #000; }
+    .popup-blog .content p.h3 {
+      font-size: 40px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 88%;
+      color: #000;
+      margin: 60px 0 30px; }
+  .popup-blog .slider-wrap {
+    margin-bottom: 60px; }
+    .popup-blog .slider-wrap .swiper-slide {
+      height: 500px; }
+      .popup-blog .slider-wrap .swiper-slide img {
+        width: 100%;
+        height: 100%;
+        -o-object-fit: cover;
+           object-fit: cover;
+        border-radius: 10px; }
+    .popup-blog .slider-wrap .swiper-pagination {
+      bottom: 0; }
+    .popup-blog .slider-wrap .swiper-pagination-bullet {
+      width: 16px;
+      height: 16px;
+      background: #f6e2d4;
+      opacity: 1 !important;
+      margin: 0 15px !important; }
+    .popup-blog .slider-wrap .swiper-pagination-bullet-active {
+      background: #FF7900; }
+  .popup-blog .swiper {
+    padding-bottom: 50px; }
+  .popup-blog .more-blog {
+    padding: 55px 60px; }
+    .popup-blog .more-blog p.h4 {
+      font-size: 40px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 88%;
+      margin-bottom: 35px;
+      color: #FF7900; }
+    .popup-blog .more-blog .item {
+      width: 100%; }
+      .popup-blog .more-blog .item a {
+        width: 100%;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-pack: justify;
+            -ms-flex-pack: justify;
+                justify-content: space-between;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap; }
+        .popup-blog .more-blog .item a:hover img {
+          -webkit-transform: scale(1.03);
+                  transform: scale(1.03); }
+      .popup-blog .more-blog .item figure {
+        width: 240px;
+        height: 150px;
+        border-radius: 10px;
+        overflow: hidden; }
+        .popup-blog .more-blog .item figure img {
+          width: 100%;
+          height: 100%;
+          -o-object-fit: cover;
+             object-fit: cover;
+          -webkit-transition: all .4s ease;
+          transition: all .4s ease; }
+      .popup-blog .more-blog .item .text {
+        width: calc(100% - 270px); }
+        .popup-blog .more-blog .item .text .label {
+          display: inline-block;
+          border-radius: 20px;
+          background: #F9E5D7;
+          padding: 0 13px;
+          height: 30px;
+          margin-bottom: 10px; }
+          .popup-blog .more-blog .item .text .label p {
+            font-size: 14px;
+            color: #000;
+            margin: 0;
+            line-height: 30px; }
+        .popup-blog .more-blog .item .text p {
+          font-size: 16px;
+          margin: 0; }
+        .popup-blog .more-blog .item .text p.title {
+          font-size: 18px;
+          margin-bottom: 10px; }
+    .popup-blog .more-blog .item + .item {
+      margin-top: 35px; }
+
+/*------------------------END-PAGE-BLOG-------------------------*/
 
 /*# sourceMappingURL=styles.css.map */
