--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,5 +1,6 @@
 $accent: #000;
 $orange: #FF7900;
+$orangeHover: #EB6F00;
 $font2: 'Petrarka', sans-serif;
 $green: #2B3D24;
 /*&:after {
@@ -2063,6 +2064,9 @@ footer{
   height: 80px;
 }
 .mac{
+  .faq-block .nice-select .current{
+    top: -12px;
+  }
   .h2{
     position: relative;
     top: -30px;
@@ -2079,9 +2083,18 @@ footer{
     position: relative;
     top: -20px;
   }
-  .testimonials .swiper-slide .top .right .h3{
+  .testimonials .swiper-slide .top .right .h3, .blog h1{
     position: relative;
     top: -20px;
+  }
+  .blog .item .text-wrap .h5, .popup-blog .content .h2{
+    position: relative;
+    top: -20px;
+  }
+
+  .popup-blog .content p.h3, .popup-blog .more-blog p.h4{
+    position: relative;
+    top: -15px;
   }
   .accordion-thumb .title{
     position: relative;
@@ -2124,6 +2137,10 @@ footer .soc a:hover{
 }
 /*-------------------------END-PAGE-HOME--------------------------*/
 .mac{
+  .faq-add .h3{
+    position: relative;
+    top: -20px;
+  }
   .border{
     border: 1px solid #000;
     padding: 0 20px;
@@ -2274,6 +2291,10 @@ footer .soc a:hover{
 /*------------------------END-PAGE-PP--------------------------*/
 /*-------------------------PAGE-FAQ--------------------------*/
 .faq-block{
+  padding-top: 0!important;
+  .breadcrumb{
+    margin-bottom: 57px;
+  }
   h1{
     display: flex;
     justify-content: center;
@@ -2281,6 +2302,7 @@ footer .soc a:hover{
     font-style: normal;
     font-weight: 400;
     line-height: 77%;
+    margin-bottom: 50px;
     b{
       font-weight: 400;
       position: relative;
@@ -2289,5 +2311,586 @@ footer .soc a:hover{
   .tooltip{
     right: -40px;
   }
+
+  .select-block{
+    border-radius: 90px;
+    background: #F9E5D7;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 10px 15px;
+    margin-bottom: 60px;
+    .item{
+      width: calc(50% - 10px);
+    }
+  }
+  .nice-select{
+    width: 100%;
+    border-radius: 90px;
+    border: 1px solid #FF7900!important;
+    background: #FEF7F3;
+    height: 66px;
+    line-height: 64px;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 400;
+    color: #000;
+    font-family: $font2;
+    .current{
+      position: relative;
+    }
+  }
+  .nice-select:after{
+    left: inherit;
+    right: 20px;
+    width: 7px;
+    height: 7px;
+    margin-top: -5px;
+  }
+  .nice-select .list{
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 150%;
+    color: #000;
+    font-family: 'Montserrat', sans-serif;
+    border-radius: 10px;
+    background: #FEF7F3;
+    padding: 15px 25px;
+    li{
+      border-bottom: 1px solid #787878;
+      height: 50px;
+      line-height: 50px;
+      font-weight: 500;
+    }
+    li:last-child{
+      border-bottom: 0;
+    }
+    .disabled{
+      display: none;
+    }
+  }
+  .bottom{
+    margin-top: 75px;
+  }
+  .bottom a{
+    background: transparent;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 150%;
+    color: $orange;
+    display: flex;
+    align-items: center;
+    width: fit-content;
+    img{
+      margin-right: 10px;
+      position: relative;
+      top: -1px;
+      vertical-align: top;
+    }
+    &:hover{
+      color: $orangeHover;
+    }
+  }
+  .nice-select .option:hover, .nice-select .option.focus, .nice-select .option.selected.focus{
+    color: $orange;
+    font-weight: 500;
+  }
+}
+
+.faq-add{
+  padding: 35px 0 120px;
+  .bg-mob{
+    display: none;
+  }
+  .content{
+    position: relative;
+    border-radius: 10px;
+    overflow: hidden;
+    background: #2B3D24;
+    padding: 92px 53px;
+  }
+  .wrap{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    z-index: 10;
+  }
+  .text{
+    width: 48%;
+  }
+  .btn-wrap{
+    width: 48%;
+    position: relative;
+    top: -10px;
+  }
+  .h3{
+    font-size: 56px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 88%;
+    font-family: $font2;
+    margin-bottom: 20px;
+    color: #fff;
+  }
+  p{
+    color: #fff;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+  }
+  .bg{
+    img{
+      position: absolute;
+      left: 0;
+      width: 100%;
+    }
+    .img-1{
+      top: 88px;
+      z-index: 3;
+    }
+    .img-2{
+      top: 140px;
+      z-index: 4;
+    }
+    .img-3{
+      top: 180px;
+      z-index: 5;
+    }
+  }
+}
+.btn-circle-orange{
+  background: $orange;
+  color: #fff;
+  &:after{
+    background: $orangeHover;
+  }
 }
 /*------------------------END-PAGE-FAQ--------------------------*/
+/*-------------------------PAGE-BLOG-------------------------*/
+.blog{
+  position: relative;
+  padding-bottom: 133px;
+  .bg-mob{
+    display: none;
+  }
+  .bg{
+    top: -50px;
+    img{
+      position: absolute;
+      left: 0;
+      width: 100%;
+    }
+    .img-1{
+      top: 0;
+    }
+    .img-2{
+      top: 85px;
+    }
+    .img-3{
+      top: 135px;
+    }
+  }
+  .head-blog{
+    padding-top: 27px;
+    p{
+      color: #000;
+      text-align: center;
+    }
+    .sub-title{
+      font-size: 32px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 150%;
+      margin-bottom: 30px;
+    }
+  }
+  h1{
+    font-size: 100px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 77%;
+    color: #000;
+    text-align: center;
+    margin-bottom: 25px;
+  }
+  .form-wrap{
+    width: 560px;
+    margin: 15px auto 40px;
+    position: relative;
+    label{
+      display: none;
+    }
+    input{
+      width: 100%;
+      outline: none;
+      border-radius: 90px;
+      border: 1px solid #FF7900;
+      background:  #FEF7F3;
+      height: 66px;
+      line-height: 64px;
+      font-size: 18px;
+      color: #000;
+      padding: 0 200px 0 35px;
+    }
+    button{
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      width: 175px;
+    }
+  }
+  .send-block{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 0 100px;
+    z-index: 10;
+    display: none;
+    background: #fff;
+    p{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 24px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 150%;
+      color: #8FA703;
+    }
+  }
+  .content-width{
+    z-index: 10;
+    position: relative;
+  }
+  .sort-line{
+    margin: 120px 0 40px;
+    padding: 0 80px;
+    ul{
+      display: flex;
+      flex-wrap: wrap;
+      position: relative;
+      padding-left: 108px;
+      li{
+        width: fit-content;
+        margin: 0 20px 20px 0;
+        position: relative;
+        input{
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          border-radius: 30px;
+          opacity: 0;
+          cursor: pointer;
+          z-index: 5;
+        }
+        label{
+          background: #FEF7F3;
+          transition: all .4s ease;
+          color: #000;
+          font-size: 18px;
+          height: 54px;
+          line-height: 52px;
+          border-radius: 30px;
+          min-width: 88px;
+        }
+        input:checked + label{
+          background: $orange;
+          color: #fff;
+        }
+        input:hover + label{
+          background: $orange;
+          color: #fff;
+        }
+      }
+      li:first-child{
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
+    }
+  }
+  .content{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 65px 40px;
+  }
+  .item{
+    figure{
+      position: relative;
+      overflow: hidden;
+      height: 230px;
+      border-radius: 10px;
+      img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        transition: all .4s ease;
+      }
+      a:hover{
+        img{
+          transform: scale(1.03);
+        }
+      }
+      .label{
+        position: absolute;
+        top: 15px;
+        left: 15px;
+        z-index: 2;
+        border-radius: 20px;
+        background: #F9E5D7;
+        p{
+          line-height: 30px;
+          font-size: 14px;
+          font-style: normal;
+          font-weight: 400;
+          padding: 0 13px;
+          color: #000;
+        }
+      }
+    }
+    .text-wrap{
+      padding: 27px 0 0;
+      p{
+        text-align: left;
+        color: #000;
+        margin-bottom: 28px;
+      }
+      .h5{
+        font-size: 40px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 88%;
+        margin-bottom: 10px;
+        text-align: left;
+      }
+      p.date{
+        margin-bottom: 0;
+        font-size: 14px;
+      }
+    }
+    .link-wrap{
+      margin-bottom: 30px;
+      a{
+        color: $orange;
+        &:hover{
+          color: #000;
+        }
+      }
+    }
+  }
+  .bottom{
+    margin-top: 82px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    a{
+      background: transparent;
+      font-size: 18px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: 150%;
+      color: $orange;
+      display: flex;
+      align-items: center;
+      width: fit-content;
+      img{
+        margin-right: 10px;
+        position: relative;
+        top: -1px;
+        vertical-align: top;
+      }
+      &:hover{
+        color: $orangeHover;
+      }
+    }
+  }
+}
+
+.popup-blog{
+  padding: 0;
+  width: 1160px;
+  .popup-main{
+    padding: 0;
+  }
+  .line-link{
+    border-bottom: 1px solid #FFF0E8;
+    height: 84px;
+    padding: 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    &>a{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 52px;
+      height: 52px;
+    }
+    .label{
+      display: inline-block;
+      border-radius: 20px;
+      background:  #F9E5D7;
+      padding: 0 13px;
+      height: 30px;
+      p{
+        font-size: 14px;
+        color: #000;
+        margin: 0;
+        line-height: 30px;
+      }
+    }
+    .close:hover{
+      img{
+        filter: invert(60%) sepia(56%) saturate(563%) hue-rotate(359deg) brightness(122%) contrast(106%);
+      }
+    }
+    .share:hover{
+      img{
+        filter: invert(60%) sepia(56%) saturate(563%) hue-rotate(359deg) brightness(101%) contrast(106%);
+      }
+    }
+  }
+  .content{
+    padding: 50px 60px;
+    border-bottom: 1px solid #FFF0E8;
+    .h2{
+      font-size: 56px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 88%;
+      text-align: center;
+      color: #000;
+      margin-bottom: 40px;
+    }
+    figure{
+      width: 100%;
+      height: auto;
+      margin-bottom: 60px;
+      img{
+        width: 100%;
+        height: auto;
+        border-radius: 10px;
+      }
+    }
+    p{
+      margin-bottom: 25px;
+      a{
+        color: $orange;
+        &:hover{
+          color: #000;
+        }
+      }
+    }
+    p.h3{
+      font-size: 40px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 88%;
+      color: #000;
+      margin: 60px 0 30px;
+    }
+  }
+  .slider-wrap{
+    margin-bottom: 60px;
+    .swiper-slide{
+      height: 500px;
+      img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 10px;
+      }
+    }
+    .swiper-pagination{
+      bottom: 0;
+    }
+    .swiper-pagination-bullet{
+      width: 16px;
+      height: 16px;
+      background: #f6e2d4;
+      opacity: 1!important;
+      margin: 0 15px!important;
+    }
+    .swiper-pagination-bullet-active{
+      background: $orange;
+    }
+  }
+  .swiper{
+    padding-bottom: 50px;
+  }
+  .more-blog{
+    padding: 55px 60px;
+    p.h4{
+      font-size: 40px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 88%;
+      margin-bottom: 35px;
+      color: $orange;
+    }
+    .item{
+      width: 100%;
+      a{
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        &:hover{
+          img{
+            transform: scale(1.03);
+          }
+        }
+      }
+      figure{
+        width: 240px;
+        height: 150px;
+        border-radius: 10px;
+        overflow: hidden;
+        img{
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          transition: all .4s ease;
+        }
+      }
+      .text{
+        width: calc(100% - 270px);
+        .label{
+          display: inline-block;
+          border-radius: 20px;
+          background:  #F9E5D7;
+          padding: 0 13px;
+          height: 30px;
+          margin-bottom: 10px;
+          p{
+            font-size: 14px;
+            color: #000;
+            margin: 0;
+            line-height: 30px;
+          }
+        }
+        p{
+          font-size: 16px;
+          margin: 0;
+        }
+        p.title{
+          font-size: 18px;
+          margin-bottom: 10px;
+        }
+      }
+    }
+    .item + .item{
+      margin-top: 35px;
+    }
+  }
+}
+/*------------------------END-PAGE-BLOG-------------------------*/
