--- a/css/font.css
+++ b/css/font.css
@@ -7,20 +7,39 @@
   font-display: swap;
 }
 
-@font-face {
+/*@font-face {
   font-family: 'Petrarka';
   src: url('../fonts/Petrarka.woff2') format('woff2'),
   url('../fonts/Petrarka.woff') format('woff');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
-}
+}*/
 
 @font-face {
   font-family: 'Montserrat';
   src: url('../fonts/Montserrat-Medium.woff2') format('woff2'),
   url('../fonts/Montserrat-Medium.woff') format('woff');
   font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('../fonts/Montserrat-ExtraBold.woff2') format('woff2'),
+  url('../fonts/Montserrat-ExtraBold.woff') format('woff');
+  font-weight: 800;
+  font-style: normal;
+  font-display: swap;
+}
+
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('../fonts/Montserrat-Bold.woff2') format('woff2'),
+  url('../fonts/Montserrat-Bold.woff') format('woff');
+  font-weight: bold;
   font-style: normal;
   font-display: swap;
 }
