--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,3 +1,20 @@
+@media (max-height: 900px) {
+  .adventures .title {
+    margin-bottom: 20px; }
+
+  .adventures .item-4 {
+    top: 10px; }
+
+  .adventures .item-7 figure {
+    width: 172px;
+    height: 172px; }
+
+  .adventures .item-7 {
+    width: 247px; }
+
+  .adventures .item-7 p.number {
+    left: 0;
+    top: -28px; } }
 @media (min-width: 1401px) {
   .home-bonner .title {
     font-size: 56px;
@@ -312,10 +329,59 @@
     grid-template-columns: repeat(2, 1fr); }
 
   .team .team-slider img {
-    height: 500px; } }
+    height: 500px; }
+
+  .adventures .item-2 figure {
+    width: 150px;
+    height: 150px; }
+
+  .adventures .item-2 {
+    width: 220px; }
+
+  .adventures .item-2 p.number {
+    left: 0; }
+
+  .adventures .item-4 figure {
+    width: 150px;
+    height: 150px; }
+
+  .adventures .item-4 {
+    width: 220px; }
+
+  .adventures .item-4 p.number {
+    top: -28px;
+    left: 0; }
+
+  .adventures .item-1 {
+    top: 170px; }
+
+  .adventures .item-7 {
+    margin-left: 155px;
+    top: 110px; }
+
+  .adventures .item-3 {
+    top: 0; }
+
+  .adventures .item-5 {
+    left: 15px; }
+
+  .adventures .item-6 {
+    left: 50px; }
+
+  .adventures .item .info {
+    width: 300px; }
+
+  .adventures {
+    overflow: hidden; }
+
+  .adventures .item-4 {
+    left: 0; } }
 @media (max-width: 991px) {
   .content-width {
     width: 720px; }
+
+  .adventures .title-desktop {
+    display: none; }
 
   .about .form-wrap {
     -webkit-transform: translate(-87%, 0);
@@ -950,7 +1016,7 @@
   .blog .content {
     grid-template-columns: repeat(2, 1fr); }
 
-  .blog .form-wrap input {
+  .blog .form-wrap span input {
     font-size: 16px; }
 
   .popup-blog .content, .popup-blog .more-blog {
@@ -1021,7 +1087,134 @@
     padding-top: 1px; }
 
   .team-add .btn-wrap {
-    left: 0; } }
+    left: 0; }
+
+  .adventures .title {
+    -webkit-box-ordinal-group: 1;
+        -ms-flex-order: 0;
+            order: 0; }
+    .adventures .title .h5 {
+      font-size: 30px;
+      font-style: normal;
+      font-weight: 800;
+      line-height: 115%;
+      text-align: center;
+      display: block;
+      color: #000;
+      margin-bottom: 10px; }
+    .adventures .title h1 {
+      font-size: 20px;
+      margin-bottom: 10px;
+      font-weight: 700;
+      color: #FF7900; }
+
+  .adventures .item {
+    padding: 0 !important;
+    width: 48%;
+    margin-bottom: 30px !important;
+    top: 0 !important;
+    left: 0 !important; }
+    .adventures .item figure {
+      border-width: 3px;
+      width: 120px;
+      height: 120px;
+      display: inline-block; }
+    .adventures .item p.number {
+      position: absolute;
+      top: 0;
+      left: 140px;
+      height: 40px;
+      width: 40px;
+      font-size: 20px; }
+    .adventures .item .h6 {
+      display: inline-block;
+      width: calc(100% - 120px);
+      padding-top: 50px;
+      padding-left: 20px;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: 150%;
+      -webkit-transform: none;
+              transform: none;
+      text-align: left;
+      float: right;
+      left: 0; }
+      .adventures .item .h6 br {
+        display: none; }
+      .adventures .item .h6 .click-info {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+        margin-top: 8px;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 150%;
+        color: #FF7900;
+        -webkit-box-pack: start;
+            -ms-flex-pack: start;
+                justify-content: flex-start; }
+        .adventures .item .h6 .click-info img {
+          margin-right: 5px;
+          -webkit-transition: all .4s ease;
+          transition: all .4s ease;
+          position: relative;
+          top: -1px; }
+
+  .adventures .item.is-active .h6 .click-info img {
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg); }
+  .adventures .item.is-active .info {
+    -webkit-transform: translate(-50%, 0) scale(1) !important;
+            transform: translate(-50%, 0) scale(1) !important; }
+
+  .adventures .content {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
+
+  .adventures .item:hover .info {
+    -webkit-transform: translate(-50%, 0) scale(0);
+            transform: translate(-50%, 0) scale(0); }
+
+  .adventures .item-7 {
+    margin-left: 0; }
+
+  .adventures .item-2 .info, .adventures .item-3 .info, .adventures .item-4 .info {
+    bottom: calc(100% + 35px); }
+
+  .event-no-tab .tab-item .item .text .h2 {
+    font-size: 30px; }
+
+  .event-no-tab .tab-item .item > figure {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+    margin: 30px 0 0; }
+  .event-no-tab .tab-item .item > .text {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1; }
+  .event-no-tab .tab-item .item .detail-info {
+    -webkit-box-ordinal-group: 4;
+        -ms-flex-order: 3;
+            order: 3; }
+
+  .event-no-tab .detail-info .detail-item .text {
+    width: 100% !important;
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1; }
+
+  .event-no-tab .detail-info .detail-item figure {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+    margin: 30px 0 0; } }
 @media (max-width: 767px) {
   .content-width {
     width: 540px; }
@@ -1115,7 +1308,10 @@
     font-size: 22px; }
 
   .team-info .item .text p {
-    font-size: 16px; } }
+    font-size: 16px; }
+
+  .adventures .item {
+    width: 49%; } }
 @media (max-width: 575px) {
   .content-width {
     width: 100%;
@@ -1646,7 +1842,7 @@
       display: block;
       position: absolute; }
 
-  .blog .form-wrap input {
+  .blog .form-wrap span input {
     font-size: 14px; }
 
   .popup-blog .line-link > a {
@@ -1674,10 +1870,10 @@
   .blog .form-wrap {
     margin: 23px auto 35px; }
 
-  .blog .form-wrap button {
+  .blog .form-wrap .btn-default {
     width: 150px; }
 
-  .blog .form-wrap input {
+  .blog .form-wrap span input {
     padding: 0 160px 0 15px; }
 
   .blog .sort-line {
@@ -2186,7 +2382,87 @@
     display: none !important; }
 
   .fix-block {
-    z-index: 99999; } }
+    z-index: 99999; }
+
+  .adventures .bg {
+    display: none; }
+
+  .adventures .bg-mob {
+    display: block; }
+    .adventures .bg-mob .img-1 {
+      position: absolute;
+      top: 35px;
+      left: 0;
+      width: 100%; }
+    .adventures .bg-mob .img-2 {
+      position: absolute;
+      top: 80px;
+      left: 0;
+      width: 100%; }
+    .adventures .bg-mob .img-3 {
+      position: absolute;
+      top: 60px;
+      left: 0;
+      width: 100%; }
+
+  .adventures .breadcrumb {
+    margin-bottom: 65px; }
+
+  .adventures .title .h5 {
+    font-size: 34px;
+    margin-bottom: 33px; }
+
+  .adventures .title {
+    margin-bottom: 50px; }
+
+  .adventures .item {
+    width: 100%;
+    -webkit-box-ordinal-group: 5 !important;
+        -ms-flex-order: 4 !important;
+            order: 4 !important; }
+
+  .adventures .item {
+    margin-bottom: 18px !important; }
+
+  .event-no-tab {
+    margin-top: 0 !important;
+    background: transparent !important; }
+
+  .adventures .item .h6 {
+    padding-left: 25px;
+    padding-top: 54px; }
+
+  .adventures .item p.number {
+    left: 145px;
+    top: 5px; }
+
+  .adventures {
+    padding-bottom: 0; }
+
+  .event-no-tab .content-width {
+    border-top: 0 !important;
+    padding-top: 30px; }
+
+  .event-no-tab .tab-item .item > .text {
+    padding: 0; }
+
+  .event-no-tab .tab-item .item {
+    background: transparent; }
+
+  .event-no-tab .tab-item .item .text .h2 {
+    font-size: 34px; }
+
+  .event-no-tab .tab-item .item .text p {
+    font-size: 16px; }
+
+  .event-no-tab .detail-info .detail-item .text {
+    padding: 0; }
+
+  .event-no-tab .tab-item .item figure {
+    max-height: 265px; }
+
+  .event-no-tab .tab-item .item + .item {
+    margin-top: 62px !important; } }
 @media (max-width: 375px) {
   .about .form-wrap {
     -webkit-transform: translate(-87%, 0);
