--- a/sass/responsive.scss
+++ b/sass/responsive.scss
@@ -1,5 +1,27 @@
-
-
+$accent: #000;
+$orange: #FF7900;
+$orangeHover: #EB6F00;
+$font2: 'Petrarka', sans-serif;
+$green: #2B3D24;
+@media (max-height: 900px){
+  .adventures .title{
+    margin-bottom: 20px;
+  }
+  .adventures .item-4{
+    top: 10px;
+  }
+  .adventures .item-7 figure{
+    width: 172px;
+    height: 172px;
+  }
+  .adventures .item-7{
+    width: 247px;
+  }
+  .adventures .item-7 p.number{
+    left: 0;
+    top: -28px;
+  }
+}
 
 @media (min-width:1401px){
   .home-bonner .title{
@@ -326,13 +348,63 @@
   .team .team-slider img{
     height: 500px;
   }
+
+  .adventures .item-2 figure {
+    width: 150px;
+    height: 150px;
+  }
+  .adventures .item-2{
+    width: 220px;
+  }
+  .adventures .item-2 p.number{
+    left: 0;
+  }
+  .adventures .item-4 figure{
+    width: 150px;
+    height: 150px;
+  }
+  .adventures .item-4{
+    width: 220px;
+  }
+  .adventures .item-4 p.number{
+    top: -28px;
+    left: 0;
+  }
+  .adventures .item-1 {
+    top: 170px;
+  }
+  .adventures .item-7{
+    margin-left: 155px;
+    top: 110px;
+  }
+  .adventures .item-3{
+    top: 0;
+  }
+  .adventures .item-5{
+    left: 15px;
+  }
+  .adventures .item-6{
+    left: 50px;
+  }
+  .adventures .item .info{
+    width: 300px;
+  }
+  .adventures{
+    overflow: hidden;
+  }
+  .adventures .item-4{
+    left: 0;
+  }
+
 }
 
 @media (max-width:991px) {
   .content-width{
     width: 720px;
   }
-
+  .adventures .title-desktop{
+    display: none;
+  }
   .about .form-wrap {
     transform: translate(-87%, 0);
   }
@@ -982,7 +1054,7 @@
   .blog .content {
     grid-template-columns: repeat(2, 1fr);
   }
-  .blog .form-wrap input{
+  .blog .form-wrap span input{
     font-size: 16px;
   }
 
@@ -1053,6 +1125,129 @@
   }
   .team-add .btn-wrap{
     left: 0;
+  }
+  .adventures .title{
+    order: 0;
+    .h5{
+      font-size: 30px;
+      font-style: normal;
+      font-weight: 800;
+      line-height: 115%;
+      text-align: center;
+      display: block;
+      color: #000;
+      margin-bottom: 10px;
+    }
+    h1{
+      font-size: 20px;
+      margin-bottom: 10px;
+      font-weight: 700;
+      color: $orange;
+    }
+  }
+  .adventures .item{
+    padding: 0!important;
+    width: 48%;
+    margin-bottom: 30px!important;
+    top: 0!important;
+    left: 0!important;
+    figure{
+      border-width: 3px;
+      width: 120px;
+      height: 120px;
+      display: inline-block;
+    }
+    p.number{
+      position: absolute;
+      top: 0;
+      left: 140px;
+      height: 40px;
+      width: 40px;
+      font-size: 20px;
+      
+    }
+    .h6{
+      display: inline-block;
+      width: calc(100% - 120px);
+      padding-top: 50px;
+      padding-left: 20px;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: 150%;
+      transform: none;
+      text-align: left;
+      float: right;
+      left: 0;
+      br{
+        display: none;
+      }
+      .click-info{
+        display: flex;
+        align-items: center;
+        margin-top: 8px;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 150%;
+        color: $orange;
+        justify-content: flex-start;
+        img{
+          margin-right: 5px;
+          transition: all .4s ease;
+          position: relative;
+          top: -1px;
+        }
+      }
+    }
+  }
+  .adventures .item.is-active{
+    .h6{
+      .click-info{
+        img{
+          transform: rotate(45deg);
+        }
+      }
+    }
+    .info{
+      transform: translate(-50%, 0) scale(1)!important;
+    }
+  }
+  .adventures .content{
+    justify-content: space-between;
+  }
+  .adventures .item:hover .info {
+    transform: translate(-50%, 0) scale(0);
+  }
+  .adventures .item-7{
+    margin-left: 0;
+  }
+
+  .adventures .item-2 .info, .adventures .item-3 .info, .adventures .item-4 .info{
+    bottom: calc(100% + 35px);
+  }
+  .event-no-tab .tab-item .item .text .h2{
+    font-size: 30px;
+  }
+  .event-no-tab .tab-item .item{
+    &>figure{
+      order: 2;
+      margin: 30px 0 0;
+    }
+    &>.text{
+      order: 1;
+    }
+    .detail-info{
+      order: 3;
+    }
+  }
+  .event-no-tab .detail-info .detail-item .text{
+    width: 100%!important;
+    order: 1;
+  }
+  .event-no-tab .detail-info .detail-item figure{
+    order: 2;
+    margin: 30px 0 0;
   }
 }
 
@@ -1152,6 +1347,9 @@
   }
   .team-info .item .text p {
     font-size: 16px;
+  }
+  .adventures .item{
+    width: 49%;
   }
 }
 
@@ -1696,7 +1894,7 @@
       position: absolute;
     }
   }
-  .blog .form-wrap input{
+  .blog .form-wrap span input{
     font-size: 14px;
   }
   .popup-blog .line-link > a{
@@ -1728,10 +1926,10 @@
   .blog .form-wrap {
     margin: 23px auto 35px;
   }
-  .blog .form-wrap button{
+  .blog .form-wrap .btn-default{
     width: 150px;
   }
-  .blog .form-wrap input{
+  .blog .form-wrap span input{
     padding: 0 160px 0 15px;
   }
   .blog .sort-line {
@@ -2247,6 +2445,87 @@
   }
   .fix-block{
     z-index: 99999;
+  }
+  .adventures .bg{
+    display: none;
+  }
+  .adventures .bg-mob{
+    display: block;
+    .img-1{
+      position: absolute;
+      top: 35px;
+      left: 0;
+      width: 100%;
+    }
+    .img-2{
+      position: absolute;
+      top: 80px;
+      left: 0;
+      width: 100%;
+    }
+    .img-3{
+      position: absolute;
+      top: 60px;
+      left: 0;
+      width: 100%;
+    }
+  }
+  .adventures .breadcrumb {
+    margin-bottom: 65px;
+  }
+  .adventures .title .h5{
+    font-size: 34px;
+    margin-bottom: 33px;
+  }
+  .adventures .title {
+    margin-bottom: 50px;
+  }
+  .adventures .item{
+    width: 100%;
+    order: 4!important;
+  }
+  .adventures .item{
+    margin-bottom: 18px!important;
+  }
+  .event-no-tab{
+    margin-top: 0!important;
+    background: transparent!important;
+  }
+  .adventures .item .h6{
+    padding-left: 25px;
+    padding-top: 54px;
+  }
+  .adventures .item p.number{
+    left: 145px;
+    top: 5px;
+  }
+  .adventures{
+    padding-bottom: 0;
+  }
+  .event-no-tab .content-width{
+    border-top: 0!important;
+    padding-top: 30px;
+  }
+  .event-no-tab .tab-item .item > .text{
+    padding: 0;
+  }
+  .event-no-tab .tab-item .item{
+    background: transparent;
+  }
+  .event-no-tab .tab-item .item .text .h2{
+    font-size: 34px;
+  }
+  .event-no-tab .tab-item .item .text p{
+    font-size: 16px;
+  }
+  .event-no-tab .detail-info .detail-item .text{
+    padding: 0;
+  }
+  .event-no-tab .tab-item .item figure {
+    max-height: 265px;
+  }
+  .event-no-tab .tab-item .item + .item {
+    margin-top: 62px !important;
   }
 }
 
